--- a/ClimateControlSystem/Android/ClimateControl/app/src/main/res/values/strings.xml
+++ b/ClimateControlSystem/Android/ClimateControl/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ClimateControl</string>
+    <string name="title_activity_device_list">DeviceList</string>
 </resources>
